fix bug in align button selected color

--- a/styles/main.css
+++ b/styles/main.css
@@ -58,10 +58,12 @@ h1 img {
 .board-color-palette label{
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  align-items: center;
+  gap: 0.9rem;
 }
 .board-color-palette .radio-color{
   height: 2rem;
+  width: 2rem;
 }
 .board-color-palette {
   display: flex;
